Мелкие правки: заголовки лицензии, Java 11, заглушки плейсхолдеров меню
- единый заголовок "OntaDev_Libs Plugin" вместо старого "PPFSS_Libs"
- List.getFirst() -> get(0) (getFirst добавлен только в Java 21, а
  проект собирается под java.version=11)
- AnnotationScanner исключает com.ontadev.libs.ioc.* из сканирования
- AbstractMenu: заготовки staticPlaceholders()/dynamicPlaceholders()